tests/specs/node/types_req_export/check.out
Check file:///[WILDLINE]/main.ts
TS2322 [ERROR]: Type '"expected"' is not assignable to type '"not"'.
const local: "not" = value;
      ~~~~~
    at file:///[WILDLINE]/main.ts:4:7

error: Type checking failed.
